--- a/src/app/components/admin/navadmin/navadmin/navadmin.component.html
+++ b/src/app/components/admin/navadmin/navadmin/navadmin.component.html
@@ -30,7 +30,7 @@
       </li>
       <li>
         <a
-          [routerLink]="'admin/order'"
+          [routerLink]="'/admin/order'"
           class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700"
         >
           <svg
