--- a/src/app/pages/user/orders/order/order.component.html
+++ b/src/app/pages/user/orders/order/order.component.html
@@ -81,11 +81,13 @@
                   Total <span>{{ totalAmount | currency : "VND" }}</span>
                 </li>
               </ul>
-              <button class="btn-17" type="submit">
-                <span class="text-container">
-                  <span class="text">Buy</span>
-                </span>
-              </button>
+              <div style="text-align: center">
+                <button class="btn-17" type="submit">
+                  <span class="text-container">
+                    <span class="text">Buy</span>
+                  </span>
+                </button>
+              </div>
             </div>
           </div>
         </div>
