--- a/src/app/components/user/header/header.component.html
+++ b/src/app/components/user/header/header.component.html
@@ -8,7 +8,7 @@
   </ul>
   <ul class="col-md-3 d-flex">
     <li *ngIf="isLoggedIn">
-      <a routerLink="">Hello {{ user.username }}</a>
+      <a routerLink="/myhistory">Hello {{ user.username }}</a>
     </li>
     <li class="cart">
       <a routerLink="/cart"
