--- a/src/app/layout/user/layout-user/layout-user.component.html
+++ b/src/app/layout/user/layout-user/layout-user.component.html
@@ -1,5 +1,5 @@
 <app-header class="h-16 bg-gray-800 text-white"></app-header>
-<div class="container">
+<div class="container" style="padding: 0 80px">
   <br />
   <router-outlet class="block"></router-outlet>
   <br />
