--- a/src/app/pages/admin/category/listCategory/listCategory.component.html
+++ b/src/app/pages/admin/category/listCategory/listCategory.component.html
@@ -1,4 +1,23 @@
-<h2>Category</h2>
+<div class="d-flex justify-content-between align-items-center">
+  <h2>Quản lý thể loại</h2>
+  <a mat-raised-button color="primary" routerLink="/admin/products/add">
+    <svg
+      class="w-6 h-6 text-gray-800 dark:text-white"
+      aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg"
+      fill="none"
+      viewBox="0 0 20 20"
+    >
+      <path
+        stroke="currentColor"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="M10 5.757v8.486M5.757 10h8.486M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+      />
+    </svg>
+  </a>
+</div>
 <p-table [value]="categoryList" [rows]="3" [paginator]="true">
   <ng-template pTemplate="header">
     <tr>
