--- a/src/app/pages/admin/products/listProducts/listProducts.component.html
+++ b/src/app/pages/admin/products/listProducts/listProducts.component.html
@@ -52,7 +52,26 @@
     Excel Excel
   </button>
 </div> -->
-
+<div class="d-flex justify-content-between align-items-center">
+  <h2>Quản lý sản phẩm</h2>
+  <a mat-raised-button color="primary" routerLink="/admin/products/add">
+    <svg
+      class="w-6 h-6 text-gray-800 dark:text-white"
+      aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg"
+      fill="none"
+      viewBox="0 0 20 20"
+    >
+      <path
+        stroke="currentColor"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="M10 5.757v8.486M5.757 10h8.486M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+      />
+    </svg>
+  </a>
+</div>
 <p-table
   #dt
   [value]="listProduct"
