--- a/src/app/pages/user/cart/cart.component.html
+++ b/src/app/pages/user/cart/cart.component.html
@@ -1,6 +1,9 @@
 <section class="shopping-cart spad">
   <div class="container">
-    <div class="row">
+    <div class="row" *ngIf="listCart.length == 0">
+      <h1>Giỏ hàng trống</h1>
+    </div>
+    <div class="row" *ngIf="listCart.length > 0">
       <div class="col-lg-12">
         <div class="shopping__cart__table">
           <table>
